Revival. Style updated to be more elegant.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,137 @@
 
 <head>
 <meta charset = "utf-8">
-<title>wiku30's Blog</title>
+<title>Zishuo Zhao's Blog</title>
 <meta name="charset" content="&quot;utf-8&quot;">
-</head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head>
 
 <body bgcolor="lavender">
+<table width="100%" height="100%" border="1" cellpadding="4" cellspacing="4" bordercolor="#000060" bordercolorlight="#00FFFF" bordercolordark="#000080">
+	<!-- MSTableType="nolayout" -->
+	<tr>
+		<td valign="top" colspan="3">
+		<!-- MSCellType="ContentHead" -->
+		
+<p align="center"><font face="Calibri Light"><font size="6" face="Georgia, Times New Roman, Times, serif">Zishuo Zhao</font></font></p>
+<div align="center">
+  <p><font color="#8080FF" face="Georgia, Times New Roman, Times, serif">Undergraduate, Yao Class 2020, IIIS, Tsinghua University
+  </font></p>
+  <p><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Computer Science / Applied Mathematics / Statistics</font></p>
+</div></td>
+	</tr>
+	<tr>
+		<td valign="top" rowspan="2" width="28%">
+		<!-- MSCellType="ContentBody" -->
+		<p align="left" style="text-indent: 40px">&nbsp;</p>
+		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Welcome to my homepage! </font></p>
+		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Hi, I am here! I am currently studying computer science in Tsinghua University. In this class with all talented classmates around me, I am struggling through every difficulty and enjoying the life to improve myself and learn from peers from time to time.</font></p>
+		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Although I major in computer science, I will not be a geek and will put the innate affection for the world into my research career and everyday life. I enjoy diving into the depths of math and trying to render the digital canvas into a colorful world.</font></p>
+		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Through the way with pervasive challenges, I feel more than delighted for the time of growing up with friends and collegues, and will always cherish the innocent days we grow up day by day. In the  future, I will get stronger and encourage myself to pursue for a bright tomorrow with all hopes coming true.</font></p>
+		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Take the time and make it count. </font></p>
+		<p align="left" style="text-indent: 40px">&nbsp;</p>
+		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><em><font color="#8080FF">Once more, on the ride of the azure skyline;</font></em></font></p>
+		<p align="left" style="text-indent: 40px"><font color="#8080FF"><em><font face="Georgia, Times New Roman, Times, serif"> Once more, through the everlasting sunshine. </font></em></font></p></td>
+		<td width="41%" rowspan="2" valign="top">
+		<p style="text-indent: 40px">&nbsp;</p>
+		<p style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Education</font></i> <font face="Georgia, Times New Roman, Times, serif"><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a> </font></p>
+		<p style="text-indent: 40px">&nbsp;</p>
+		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Dept. Computer Science and Technology, Tsinghua University</font></p>
+		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2015/08 - 2016/05 </font></p>
+		<p style="text-indent: 40px">&nbsp;</p>
+		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Yao Class, IIIS, Tsinghua University</font></p>
+		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2016/05 - 2020/06  </font></p>
+		<p style="text-indent: 40px">&nbsp;</p>
+		<p align="center" style="text-indent: 0px"><font color="#7070C0" face="Georgia, Times New Roman, Times, serif"><img src="album/wisp_of_spring.jpg" alt="a" width="420" height="315" align="bottom"></font></p>
+		<p align="center" style="text-indent: 0px"><em><font color="#A0A0E8" size="-1" face="Georgia, Times New Roman, Times, serif">(Photographed by me, 2019/03/31)</font></em></p></td>
+		<td width="31%" valign="top">
+		<!-- MSCellType="NavBody" -->
+		<p align="left" style="text-indent: 40px">&nbsp;</p>
+		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Research Interest</font></i></p>
+		<p align="left" style="text-indent: 40px">
+  <font face="Georgia, Times New Roman, Times, serif">I am always interested to do research in 
+interdisciplinary fields in computer science, especially associated with mathematics. Now my research interest spans  the fields of<font color="#0000C0"> Computational Geometry/Topology, Computer Vision, Graphics, Robotics, Theoretical Machine Learning and Statistics. </font></font></p>
+	  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Additionally, I have an amateur interest in <font color="#8080FF">Cryptography</font>, especially <font color="#8080FF">Asymmetric Encryption</font>. Although I do not expect to do research in this area, I feel it  very enchanting. I will be pleased if you would like to discuss about relevant topics with me. </font></p>
+	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
+	</tr>
+	<tr>
+		<td  valign="top" width="31%">
+		<p align="left" style="text-indent: 40px">&nbsp;</p>
+		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Contacts:</font></i></p>
+		<p align="left" style="text-indent: 40px"><font size="-1" face="Georgia, Times New Roman, Times, serif">i [at] w.wiku30.xyz</font> <font size="-1" face="Georgia, Times New Roman, Times, serif">(guaranteed valid through &gt;2023/10)</font></p>
+		<p align="left" style="text-indent: 40px"><font size="-1" face="Georgia, Times New Roman, Times, serif">zzs15 [at] mails.tsinghua.edu.cn (expires in 2020/06) </font></p>
+		<p align="left" style="text-indent: 40px"> <font size="-1" face="Georgia, Times New Roman, Times, serif"><a href="http://www.github.com/wiku30"> <font color="#8080FF">https://www.github.com/wiku30</font></a></font> <font size="-1" face="Georgia, Times New Roman, Times, serif">(permanent)</font></p>
+		<p align="left" style="text-indent: 40px"><font color="#8080FF" size="-1" face="Georgia, Times New Roman, Times, serif"><a href="https://www.facebook.com/zishuo.zhao.528"><font color="#8080FF">https://www.facebook.com/zishuo.zhao.528</font></a></font></p>
+		<p align="left" style="text-indent: 40px">&nbsp;</p>
+	  <p align="left" style="text-indent: 40px">&nbsp;</p>		</td>
+	</tr>
+	<tr>
+		<td colspan="2" valign="top">
+<p align="left" style="text-indent: 40px">&nbsp;</p>
+		<!-- MSCellType="ContentFoot" -->
+		<p style="margin-top: 0px; text-indent: 40px;"><i><font color="#0000FF" face="Consolas">Research Experience</font></i></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">The University of Texas at Austin</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2018/04 - 2018/08</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Research Intern, advised by Prof Qixing Huang and Prof Chandrajit Bajaj.</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Tsinghua University, <a href="https://cg.cs.tsinghua.edu.cn/"><font color="#0000D0">CG Lab</font></a> </font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2018/09 - 2019/03</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Undergraduate Researcher, advised by Prof Shi-Min Hu. </font></p>
+		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Tsinghua University</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2019/03 - present</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Graduation Project, advised by Prof Shi-Min Hu.</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
+		<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Competition Attended </font></i>
+		  
+		<p align="left" style="text-indent: 40px">
+  <font face="Consolas"> <script language=javascript>
+var d0=new Date("2018/11/15  ");
+var now=new Date();
+var delta=Math.ceil((d0-now)/1000/86400);
+if(delta>0)
+{
+document.write("[2018/11/15] ~")
+document.write(+delta)
+document.write(" days left for PhD applications")
+}
+</script>
+  </font><font face="Georgia, Times New Roman, Times, serif"><a href="https://ai.net9.org/games/dorado/articles"><font color="#0000D0">The 20th Artificial Inteligence Programming Contest</font></a> of Tsinghua University</font>, <font face="Georgia, Times New Roman, Times, serif">ranked in the  15th place </font></p>
+	  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2016/03 - 2016/05</font></p>
+	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
+		<td  valign="top" width="31%">
+		
+		
+		<p align="left" style="text-indent: 40px">&nbsp;</p>
+		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Hobbies in Life</font></i></p>
+		<p align="left" style="text-indent: 40px"> <font face="Georgia, Times New Roman, Times, serif">Programming</font></p>
+		<p align="left" style="text-indent: 40px"> <font face="Georgia, Times New Roman, Times, serif">Photography</font></p>
+		<p align="left" style="text-indent: 40px"> <font face="Georgia, Times New Roman, Times, serif">Writing</font></p>
+		<p align="left" style="text-indent: 40px"> <font face="Georgia, Times New Roman, Times, serif">Singing</font></p>
+		<p align="left" style="text-indent: 40px"><font color="#8080FF" size="-1" face="Georgia, Times New Roman, Times, serif">(Due to limited space,  more non-acadamic works are generally not presented on my website. If you are interested in them, feel free to email me and I will share some to you ^_^ )</font></p>
+		<p align="left" style="text-indent: 40px"><font color="lavender" size="-1" face="Georgia, Times New Roman, Times, serif">My favorite computer games: League of Legends &amp; Celeste </font></p>
+		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Personal Public Key(RSA-4096):</font></i></p>
+		<p align="left" style="text-indent: 0px"><font color="#7070E8" size="-2" face="Courier New, Courier, monospace">-----BEGIN PUBLIC KEY-----<br>
+	    MIICIjANBgkqhkiG9w0BAQEFAAOCAg8AMIICCgKCAgEAwo5gFN3t4LPPluAX5Pzm<br>
+	    N44qz46t1xaJpmjvO7NFQDALh5Aj27UZM0KKiXbdT0yM6AJXZuX0mtnx/obQ+Lao<br>
+	    WCkXkdH2rQGX2eBwN51OXcbHBHRctaIZSLwvWGG2qgj6sSxMIcm5uZviqLdZ1nun<br>
+	    9TY0kzj37Eg4BIUf1/Sp7nSRlQPUDvBwgTYJlJXFYNm6RNqThwHW6eu2ZEBMDu+k<br>
+	    1yoE8M13xsb33lzuUKmE0XrkmMYK1cR9Z0F726k77dsUssWo73zazHtUGlkcZZ5m<br>
+	    643szbG34YsynlcTxifhFSQf8qwuHcytxn0MUVHHwOXjAVaGYHAZsxWAj7na3t/l<br>
+	    37jdfomYXf2K9hGpirMDYIVNhMQ4k9B4vJ8KAaZzw1qXf/E2FJl2sITM7h3c6TD8<br>
+	    IKrKOOg1WDOMV4ARCFNGrQfOmvhoNZuZvaFv61/m+Bc5kG6IXhP15eiCKw96LnZt<br>
+	    inkWi2ls9iaKLr/zTiayBc2tf6xEFeUsWOwNRsjZcJV68k5IhAlCQFhWZLgj5xYB<br>
+	    kkOjSQzOUBmkdIIABXcB3tmOk6rpgQb8kNduiX2syIlpleaZTF/yd613AeXE74QH<br>
+	    XUyVzBgWvmwuuW9MLLjGSWS6RAsx/3ax0Kb3B0cuIG5+LkP+vmb0fL4kZ7bY4Jjx<br>
+	    cg8nWf8JElEukDjB8nA2DecCAwEAAQ==<br>
+	    -----END PUBLIC KEY-----</font></p>
+	  <p align="left" style="text-indent: 40px"><font size="-1" face="Georgia, Times New Roman, Times, serif">Note: if someone says something suspicious with my identity (e.g. to borrow money) and you feel that it may be a scam, you can encrypt anything with the public key above (via OpenSSL) and ask him to decrypt it. If he fails,  it is a scam. If I am faced with an emergency in which I could not even find a computer to do the decryption, I will definitely call the police rather than ask you for help. </font></p>
+	  <p align="left" style="text-indent: 40px"><font size="-1" face="Georgia, Times New Roman, Times, serif">I may also do digital signatures with my private key, and you can verify it with the public key above. However, I am not sure if there are certain scenarios where I am supposed to do this. </font></p>
+	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
+	</tr>
+</table>
 
-<font size="4"> Due to critical hardship I am facing, this blog is temporarily closed. <b> </font>
-
+<p align="right"><font color="#0000FF"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2019-03-31</font></p>
+<p align="right">&nbsp;</p>
 </body>
 
 </html>
