--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Yao Class, IIIS, Tsinghua University</font></p>
 		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2016/05 - 2020/06  </font></p>
 		<p style="text-indent: 40px">&nbsp;</p>
-		<p align="center" style="text-indent: 0px"><font color="#7070C0" face="Georgia, Times New Roman, Times, serif"><img src="album/wisp_of_spring.jpg" alt="a" width="420" height="315" align="bottom"></font></p>
-		<p align="center" style="text-indent: 0px"><em><font color="#A0A0E8" size="-1" face="Georgia, Times New Roman, Times, serif">(Photographed by me, 2019/03/31)</font></em></p></td>
+		<p align="center" style="text-indent: 0px">&nbsp;</p>
+		<p align="center" style="text-indent: 0px">&nbsp;</p></td>
 		<td width="31%" valign="top">
 		<!-- MSCellType="NavBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
