--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><em><font color="#8080FF">Once more, on the ride of the azure skyline;</font></em></font></p>
 	  <p align="left" style="text-indent: 40px"><font color="#8080FF"><em><font face="Georgia, Times New Roman, Times, serif"> Once more, through the everlasting sunshine. </font></em></font></p></td>
-		<td width="38%" rowspan="2" valign="top">
+		<td width="39%" height="458" valign="top">
 		<p style="text-indent: 40px">&nbsp;</p>
 		<p style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Education</font></i> <font face="Georgia, Times New Roman, Times, serif"><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a> </font></p>
 		<p style="text-indent: 40px">&nbsp;</p>
@@ -44,7 +44,7 @@
 		<p style="text-indent: 40px">&nbsp;</p>
 		<p align="center" style="text-indent: 0px">&nbsp;</p>
 	  <p align="center" style="text-indent: 0px">&nbsp;</p></td>
-		<td width="27%" valign="top">
+		<td width="26%" valign="top">
 		<!-- MSCellType="NavBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Research Interest</font></i></p>
@@ -55,7 +55,8 @@ interdisciplinary fields in computer science, especially associated with mathema
 	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 	<tr>
-		<td  valign="top" width="27%">
+	  <td width="39%" valign="top">&nbsp;</td>
+		<td  valign="top" width="26%">
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Contacts:</font></i></p>
 		<p align="left" style="text-indent: 40px"><font size="-1" face="Georgia, Times New Roman, Times, serif">i [at] w.wiku30.xyz</font> <font size="-1" face="Georgia, Times New Roman, Times, serif">(guaranteed valid through &gt;2023/10)</font></p>
@@ -83,7 +84,6 @@ interdisciplinary fields in computer science, especially associated with mathema
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Graduation Project, advised by Prof Shi-Min Hu.</font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Competition Attended </font></i>
-		  
 		<p align="left" style="text-indent: 40px">
   <font face="Consolas"> <script language=javascript>
 var d0=new Date("2018/11/15  ");
@@ -99,7 +99,7 @@ document.write(" days left for PhD applications")
   </font><font face="Georgia, Times New Roman, Times, serif"><a href="https://ai.net9.org/games/dorado/articles"><font color="#0000D0">The 20th Artificial Inteligence Programming Contest</font></a> of Tsinghua University</font>, <font face="Georgia, Times New Roman, Times, serif">ranked in the  15th place </font></p>
 	  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2016/03 - 2016/05</font></p>
 	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
-		<td  valign="top" width="27%">
+		<td  valign="top" width="26%">
 		
 		
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
