--- a/index.html
+++ b/index.html
@@ -55,7 +55,19 @@ interdisciplinary fields in computer science, especially associated with mathema
 	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 	<tr>
-	  <td width="39%" valign="top">&nbsp;</td>
+	  <td width="39%" valign="top">
+	<p align="left" style="text-indent: 40px">&nbsp;</p>
+	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif" color="#A0A0F0"> <script language=javascript>
+var d0=new Date("2017/09/10");
+var now=new Date();
+var delta=Math.ceil((d0-now)/1000/86400);
+if(delta>0)
+{
+document.write("Yes, as you noticed, the background color on the page is about a person who impressed me a lot. Although it was a story long long ago, I do appreciate her for supporting me in some most desparate times and delighting memories over years. Surely, I think I would never say it to you, but if the time were to go back, as someone did on their computer, I will at least be glad to tell you that, I wish that I could witness your growth in smiling days, and will feel happy for the happiness of you. ")
+}
+</script>
+  </font></p>
+</td>
 		<td  valign="top" width="26%">
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Contacts:</font></i></p>
@@ -85,18 +97,7 @@ interdisciplinary fields in computer science, especially associated with mathema
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Competition Attended </font></i>
 		<p align="left" style="text-indent: 40px">
-  <font face="Consolas"> <script language=javascript>
-var d0=new Date("2018/11/15  ");
-var now=new Date();
-var delta=Math.ceil((d0-now)/1000/86400);
-if(delta>0)
-{
-document.write("[2018/11/15] ~")
-document.write(+delta)
-document.write(" days left for PhD applications")
-}
-</script>
-  </font><font face="Georgia, Times New Roman, Times, serif"><a href="https://ai.net9.org/games/dorado/articles"><font color="#0000D0">The 20th Artificial Inteligence Programming Contest</font></a> of Tsinghua University</font>, <font face="Georgia, Times New Roman, Times, serif">ranked in the  15th place </font></p>
+<font face="Georgia, Times New Roman, Times, serif"><a href="https://ai.net9.org/games/dorado/articles"><font color="#0000D0">The 20th Artificial Inteligence Programming Contest</font></a> of Tsinghua University</font>, <font face="Georgia, Times New Roman, Times, serif">ranked in the  15th place </font></p>
 	  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2016/03 - 2016/05</font></p>
 	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 		<td  valign="top" width="26%">
