--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <html>
 
 <head>
-<meta charset = "utf-8">
-<title>Zishuo Zhao's Blog</title>
-<meta name="charset" content="&quot;utf-8&quot;">
+<title>Zishuo Zhao's Homepage</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head>
 
 <body bgcolor="lavender">
