--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ interdisciplinary fields in computer science, especially associated with mathema
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2019-03-31</font></p>
+<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2019-03-31</font></i></p>
 
 </body>
 
