--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ interdisciplinary fields in computer science, especially associated with mathema
 	<tr>
 	  <td width="39%" valign="top">
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif" color="#A0A0F0"> <script language=javascript>
+	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif" color="#A0A0F0">
 
   </font></p>
 </td>
