public key updated for GPG

--- a/index.html
+++ b/index.html
@@ -109,24 +109,11 @@ document.write("Yes, as you noticed, the background color on the page is about a
 		<p align="left" style="text-indent: 40px"> <font face="Georgia, Times New Roman, Times, serif">Singing</font></p>
 		<p align="left" style="text-indent: 40px"><font color="#8080FF" size="-1" face="Georgia, Times New Roman, Times, serif">(Due to limited space,  more non-acadamic works are generally not presented on my website. If you are interested in them, feel free to email me and I will share some to you ^_^ )</font></p>
 		<p align="left" style="text-indent: 40px"><font color="lavender" size="-1" face="Georgia, Times New Roman, Times, serif">My favorite computer games: League of Legends &amp; Celeste </font></p>
-		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Personal Public Key(RSA-4096):</font></i></p>
-		<p align="left" style="text-indent: 0px"><font color="#7070E8" size="-2" face="Courier New, Courier, monospace">-----BEGIN PUBLIC KEY-----<br>
-	    MIICIjANBgkqhkiG9w0BAQEFAAOCAg8AMIICCgKCAgEAwo5gFN3t4LPPluAX5Pzm<br>
-	    N44qz46t1xaJpmjvO7NFQDALh5Aj27UZM0KKiXbdT0yM6AJXZuX0mtnx/obQ+Lao<br>
-	    WCkXkdH2rQGX2eBwN51OXcbHBHRctaIZSLwvWGG2qgj6sSxMIcm5uZviqLdZ1nun<br>
-	    9TY0kzj37Eg4BIUf1/Sp7nSRlQPUDvBwgTYJlJXFYNm6RNqThwHW6eu2ZEBMDu+k<br>
-	    1yoE8M13xsb33lzuUKmE0XrkmMYK1cR9Z0F726k77dsUssWo73zazHtUGlkcZZ5m<br>
-	    643szbG34YsynlcTxifhFSQf8qwuHcytxn0MUVHHwOXjAVaGYHAZsxWAj7na3t/l<br>
-	    37jdfomYXf2K9hGpirMDYIVNhMQ4k9B4vJ8KAaZzw1qXf/E2FJl2sITM7h3c6TD8<br>
-	    IKrKOOg1WDOMV4ARCFNGrQfOmvhoNZuZvaFv61/m+Bc5kG6IXhP15eiCKw96LnZt<br>
-	    inkWi2ls9iaKLr/zTiayBc2tf6xEFeUsWOwNRsjZcJV68k5IhAlCQFhWZLgj5xYB<br>
-	    kkOjSQzOUBmkdIIABXcB3tmOk6rpgQb8kNduiX2syIlpleaZTF/yd613AeXE74QH<br>
-	    XUyVzBgWvmwuuW9MLLjGSWS6RAsx/3ax0Kb3B0cuIG5+LkP+vmb0fL4kZ7bY4Jjx<br>
-	    cg8nWf8JElEukDjB8nA2DecCAwEAAQ==<br>
-	    -----END PUBLIC KEY-----</font></p>
-	  <p align="left" style="text-indent: 40px"><font size="-1" face="Georgia, Times New Roman, Times, serif">Note: if someone says something suspicious with my identity (e.g. to borrow money) and you feel that it may be a scam, you can encrypt anything with the public key above (via OpenSSL) and ask him to decrypt it. If he fails,  it is a scam. If I am faced with an emergency in which I could not even find a computer to do the decryption, I will definitely call the police rather than ask you for help. </font></p>
-	  <p align="left" style="text-indent: 40px"><font size="-1" face="Georgia, Times New Roman, Times, serif">I may also do digital signatures with my private key, and you can verify it with the public key above. However, I am not sure if there are certain scenarios where I am supposed to do this. </font></p>
-	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
+		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Personal GPG Public Key(RSA-4096):</font></i></p>
+		<p align="left" style="text-indent: 40px"><font size="-1" face="Georgia, Times New Roman, Times, serif">I have a GPG keypair for secure communication, which  can be found <a href="http://keys.gnupg.net/pks/lookup?search=wiku30&fingerprint=on&op=index"><font color="#8080FF">here</font></a> on gnupg.net, with the fingerprint</font><font size="-1">:</font></p>
+		<pre><font size="-2">      BD41 48A0 8CFE FC41 1679 E74A FC44 6B90 77EA EF00</font></pre>
+		<p align="left" style="text-indent: 40px"><font size="-1" face="Georgia, Times New Roman, Times, serif">Additionally, for any critical document/information I may send you, you can ask me for a digital signature which can be checked by the public key before, for verification of authenticity.</font></p>
+		<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 </table>
 
