--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@ interdisciplinary fields in computer science, especially associated with mathema
 		<p align="left" style="text-indent: 40px"><font color="lavender" size="-1" face="Georgia, Times New Roman, Times, serif">My favorite computer games: League of Legends &amp; Celeste </font></p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Personal GPG Public Key(RSA-4096):</font></i></p>
 		<p align="left" style="text-indent: 40px"><font size="-1" face="Georgia, Times New Roman, Times, serif">I have a GPG keypair for secure communication, which  can be found <a href="http://keys.gnupg.net/pks/lookup?search=wiku30&fingerprint=on&op=index"><font color="#8080FF">here</font></a> on gnupg.net, with the fingerprint</font><font size="-1">:</font></p>
-		<pre><font size="-2" face="Courier New, Courier, monospace">      BD41 48A0 8CFE FC41 1679 E74A FC44 6B90 77EA EF00</font></pre>
+		<div align="center">
+		  <pre><font size="-2" face="Courier New, Courier, monospace">BD41 48A0 8CFE FC41 1679 E74A FC44 6B90 77EA EF00</font></pre>
+		  </div>
 		<p align="left" style="text-indent: 40px"><font size="-1" face="Georgia, Times New Roman, Times, serif">Additionally, for any critical document/information I may send you, you can ask me for a digital signature which can be checked by the public key before, for verification of authenticity.</font></p>
 		<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
