--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Yao Class, IIIS, Tsinghua University</font></p>
 		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2016/05 - 2020/06  </font></p>
 		<p style="text-indent: 40px">&nbsp;</p>
+		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Overall GPA: <font color="#0000C0">3.64/4</font> </font></p>
+		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">GPA in last two years: <font color="#0000c0">3.69/4 </font></font></p>
 		<p align="center" style="text-indent: 0px">&nbsp;</p>
 	  <p align="center" style="text-indent: 0px">&nbsp;</p></td>
 		<td width="26%" valign="top">
@@ -55,10 +57,11 @@ interdisciplinary fields in computer science, especially associated with mathema
 	<tr>
 	  <td width="39%" valign="top">
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif" color="#A0A0F0">
-
-  </font></p>
-</td>
+	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Academic Work</font></i></p>
+	<p align="left" style="text-indent: 40px">&nbsp;</p>
+    <p align="left" style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">Bachelor Thesis</font></p>
+    <p align="left" style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif"><em>Scene Analysis and Reconstruction based on Geometric Distance</em></font><font face="Georgia, Times New Roman, Times, serif"><em>s</em></font><em></em></p>
+    <p align="left" style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">Supervisor: Prof. Shi-Min Hu </font></p></td>
 		<td  valign="top" width="26%">
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Contacts:</font></i></p>
@@ -74,6 +77,7 @@ interdisciplinary fields in computer science, especially associated with mathema
 <p align="left" style="text-indent: 40px">&nbsp;</p>
 		<!-- MSCellType="ContentFoot" -->
 		<p style="margin-top: 0px; text-indent: 40px;"><i><font color="#0000FF" face="Consolas">Research Experience</font></i></p>
+		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">The University of Texas at Austin</font></p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2018/04 - 2018/08</font></p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Research Intern, advised by Prof Qixing Huang and Prof Chandrajit Bajaj.</font></p>
@@ -83,7 +87,7 @@ interdisciplinary fields in computer science, especially associated with mathema
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Undergraduate Researcher, advised by Prof Shi-Min Hu. </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Tsinghua University</font></p>
-		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2019/03 - present</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2019/03 - 2019/06 </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Graduation Project, advised by Prof Shi-Min Hu.</font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Competition Attended </font></i>
@@ -96,6 +100,7 @@ interdisciplinary fields in computer science, especially associated with mathema
 		
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Hobbies in Life</font></i></p>
+		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"> <font face="Georgia, Times New Roman, Times, serif">Programming</font></p>
 		<p align="left" style="text-indent: 40px"> <font face="Georgia, Times New Roman, Times, serif">Photography</font></p>
 		<p align="left" style="text-indent: 40px"> <font face="Georgia, Times New Roman, Times, serif">Writing</font></p>
@@ -112,7 +117,7 @@ interdisciplinary fields in computer science, especially associated with mathema
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2019-04-11</font></i></p>
+<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2019-06-11</font></i></p>
 
 </body>
 
