update: bachelor thesis

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@ interdisciplinary fields in computer science, especially associated with mathema
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
     <p align="left" style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">Bachelor Thesis</font></p>
     <p align="left" style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif"><em>Scene Analysis and Reconstruction based on Geometric Distance</em></font><font face="Georgia, Times New Roman, Times, serif"><em>s</em></font><em></em></p>
-    <p align="left" style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">Supervisor: Prof. Shi-Min Hu </font></p></td>
+    <p align="left" style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">Supervisor: Prof. Shi-Min Hu </font></p>
+    <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Graded: <font color="#0000c0">A(4.0/95+) </font></font></p></td>
 		<td  valign="top" width="26%">
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Contacts:</font></i></p>
@@ -117,7 +118,7 @@ interdisciplinary fields in computer science, especially associated with mathema
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2019-06-11</font></i></p>
+<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2019-07-02</font></i></p>
 
 </body>
 
