major GPA added

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		<p style="text-indent: 40px">&nbsp;</p>
 		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Overall GPA: <font color="#0000C0">3.64/4</font> </font></p>
 		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">GPA in last two years: <font color="#0000c0">3.69/4 </font></font></p>
+		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Major GPA: <font color="#0000C0">3.76/4</font></font></p>
 		<p align="center" style="text-indent: 0px">&nbsp;</p>
 	  <p align="center" style="text-indent: 0px">&nbsp;</p></td>
 		<td width="26%" valign="top">
