--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@ interdisciplinary fields in computer science, especially associated with mathema
     <p align="left" style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">Bachelor Thesis</font></p>
     <p align="left" style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif"><em>Scene Analysis and Reconstruction based on Geometric Distance</em></font><font face="Georgia, Times New Roman, Times, serif"><em>s</em></font><em></em></p>
     <p align="left" style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">Supervisor: Prof. Shi-Min Hu </font></p>
-    <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Graded: <font color="#0000c0">A(4.0/95+) </font></font></p></td>
+    <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Graded: <font color="#0000c0">A(4.0/95+) </font></font></p>
+    <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Manuscript: <a href="https://arxiv.org/abs/1907.06441"><font color="#8080FF">arXiv:1907.06441</font></a></font></p></td>
 		<td  valign="top" width="26%">
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Contacts:</font></i></p>
@@ -119,7 +120,7 @@ interdisciplinary fields in computer science, especially associated with mathema
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2019-07-02</font></i></p>
+<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2019-07-03</font></i></p>
 
 </body>
 
